--- a/css/main.css
+++ b/css/main.css
@@ -56,11 +56,15 @@ nav li {
   text-align: center;
 }
 
+}
+
 @media only screen and (mid-width: 38em) {
 
 html {
   font-size: 110%;
   line-height: 1.4;
+}
+
 }
 
 @media only screen and (mid-width: 60em) {
@@ -87,8 +91,12 @@ h1 {
   margin-right: 1.5rem;
 }
 
+}
+
 @media only screen and (mid-width: 90em) {
 
 html {
   font-size: 130%;
+}
+
 }
